deploy/k8s/mcp-deployment.removed-2026-07-31.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "7"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"mcp","namespace":"humain-cms"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"mcp"}},"template":{"metadata":{"labels":{"app":"mcp"}},"spec":{"containers":[{"command":["pnpm","--filter","@humain/mcp-server","start"],"envFrom":[{"secretRef":{"name":"humain-cms-env"}}],"image":"asia-south1-docker.pkg.dev/project-90d788b2-28d7-4268-b3f/humain-cms/stack:v1","name":"mcp"}]}}}}
  creationTimestamp: "2026-07-19T12:27:03Z"
  generation: 7
  name: mcp
  namespace: humain-cms
  resourceVersion: "1785495053594591019"
  uid: 1566ce26-ec2a-48fe-b37c-c92e761134d9
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mcp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mcp
    spec:
      containers:
      - command:
        - pnpm
        - --filter
        - '@humain/mcp-server'
        - start
        image: asia-south1-docker.pkg.dev/project-90d788b2-28d7-4268-b3f/humain-cms/stack:v8
        imagePullPolicy: IfNotPresent
        name: mcp
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2026-07-19T12:27:03Z"
    lastUpdateTime: "2026-07-20T10:37:39Z"
    message: ReplicaSet "mcp-6fccc976df" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2026-07-31T10:50:53Z"
    lastUpdateTime: "2026-07-31T10:50:53Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  observedGeneration: 7
  replicas: 1
  unavailableReplicas: 1
  updatedReplicas: 1
